B-77418 Tech Debt: FDA: refactor deserialization logic for NTS batch, scenario JSON fields and SAL fund pool fields